Added the five day forecast and some initial CSS

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="resetsheet" src="/assets/reset.css">
-    <link rel="stylesheet" src="/assets/style.css">
+    <link rel="resetsheet" href="assets/reset.css">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Weather Forecast</title>
 </head>
 <body>
@@ -28,8 +28,9 @@
             </div>
             
         </div>
-        <div id="fiveDayForecastEl">
-            <h2>5-Day Forecast</h2>
+        <h2>5-Day Forecast</h2>
+        <div id="fiveDayContainer">
+            <div id="fiveDayForecastEl"></div>
         </div>
     </section>
     
