Added dates to the Forecasts, then the key stopped working

--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
         <div id="oneDayForecastEl">
             <div id="locationTitle">Enter a Location</div>
             <div id="weatherDetails">
-                <div id="temperature"></div>
-                <div id="wind-speed"></div>
-                <div id="uv"></div>
-                <div id="humidity"></div>
+                <div id="weatherCurrentIcon"></div>
+                <div>
+                    <img id="dateToday"></img>
+                    <div id="temperature"></div>
+                    <div id="wind-speed"></div>
+                    <div id="uv"></div>
+                    <div id="humidity"></div>
+                </div>
             </div>
             
         </div>
